--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Josefin Sans', sans-serif;
-  background-color: #fff8dc;
+  background-color: #880abe;
 }
 
 .container {
@@ -59,7 +59,7 @@ button {
 
 button:hover {
   background-color: #000;
-  color: #fff8dc;
+  color: #880abe;
 }
 
 .action-title {
@@ -82,8 +82,7 @@ li {
 }
 
 li.selected-item {
-  background-color: #000;
-  color: #fff8dc;
+  font-weight: 900;
 }
 
 button:disabled {
