feat: modal added in the order page

--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,7 @@ button {
   cursor: pointer;
   transition: all .2s linear;
   margin-top: 20px;
+  font-weight: 900;
 }
 
 button:hover {
@@ -106,5 +107,26 @@ button:disabled {
 .action-container {
   display: flex;
   justify-content: center;
+}
+
+.backdrop {
+  position: fixed;
+  inset: 0;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal {
+  width: 400px;
+  background-color: #fff;
+  padding: 40px 20px;
+  border-radius: 10px;
+  text-align: center;
+}
+
+.modal p {
+  font-weight: 900;
 }
 
