--- a/src/index.css
+++ b/src/index.css
@@ -133,6 +133,18 @@ button:disabled {
   border: 3px solid #000;
 }
 
+.loader-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 40px;
+}
+
+.loader-container p:hover {
+  cursor: pointer;
+}
+
 .loader {
   width: 10px;
   height: 10px;
@@ -140,3 +152,4 @@ button:disabled {
   background-color: #fff;
   margin-top: 50px;
 }
+
